--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "bugs": "https://github.com/benface/tailwindcss-transitions/issues",
   "homepage": "https://github.com/benface/tailwindcss-transitions",
   "scripts": {
-    "test": "node test.js",
+    "test": "jest",
     "release": "f(){ release-it $1 && github-release-from-changelog ;};f"
   },
   "dependencies": {
@@ -19,6 +19,10 @@
   },
   "devDependencies": {
     "github-release-from-changelog": "^1.3.2",
-    "release-it": "^7.6.2"
+    "jest": "^23.6.0",
+    "jest-matcher-css": "^1.0.3",
+    "postcss": "^7.0.5",
+    "release-it": "^7.6.2",
+    "tailwindcss": "^0.7.0"
   }
 }
