--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "Tailwind CSS plugin to generate transition utilities",
   "author": "Benoît Rouleau <benoit.rouleau@icloud.com>",
   "license": "ISC",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/benface/tailwindcss-transitions.git"
-  },
+  "repository": "https://github.com/benface/tailwindcss-transitions.git",
   "bugs": "https://github.com/benface/tailwindcss-transitions/issues",
   "homepage": "https://github.com/benface/tailwindcss-transitions",
   "scripts": {
@@ -15,14 +12,14 @@
     "release": "f(){ release-it $1 && github-release-from-changelog ;};f"
   },
   "dependencies": {
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "github-release-from-changelog": "^1.3.2",
     "jest": "^24.8.0",
     "jest-matcher-css": "^1.1.0",
     "postcss": "^7.0.17",
-    "release-it": "^12.3.2",
-    "tailwindcss": "^1.0.4"
+    "release-it": "^12.3.4",
+    "tailwindcss": "^1.0.6"
   }
 }
